<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <RadioGroup
        android:id="@+id/sort_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/rb_relevance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/relevance" />

        <RadioButton
            android:id="@+id/rb_price_low_to_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_low_to_high" />

        <RadioButton
            android:id="@+id/rb_price_high_to_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_high_to_low" />

        <RadioButton
            android:id="@+id/rb_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newest" />

        <RadioButton
            android:id="@+id/rb_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/average_rating" />

        <RadioButton
            android:id="@+id/rb_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popularity" />
    </RadioGroup>

</LinearLayout>